--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "react-test-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://freebiker2000.github.io",
   "dependencies": {
-    "chart.js": "^2.8.0",
     "react": "^16.8.6",
-    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-vis": "^1.11.7",
     "styled-components": "^4.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
